src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
.container {
    margin-top: 3rem;
    padding: 3rem;
}

:global {
    :root {
        --give-primary-color: #69b868;
        --givewp-admin-bar-height: var(--givewp-spacing-8);
        --header-height: 97px;

        @media (max-width: 782px){
            --givewp-admin-bar-height: 46px;
        }
    }

    .post-type-give_forms #wpbody {
        box-sizing: border-box;
        background-color: #f9fafb;
        min-height: calc(100vh - 32px);

        & > a {
            text-decoration: underline;
        }
    }

    .post-type-give_forms #wpbody-content {
        box-sizing: border-box;
    }

    .post-type-give_forms #wpbody::after {
        all: revert;
    }

    .give-visually-hidden {
        position: absolute;
        width: 1px;
        height: 1px;
        padding: 0;
        margin: -1px;
        overflow: hidden;
        clip: rect(0, 0, 0, 0);
        white-space: nowrap;
        border-width: 0;
    }

    #wpcontent {
        padding: 0;
    }
}

.page {
    box-sizing: border-box;
    color: #333;
    font-family: Inter, system-ui, sans-serif;
    font-size: 1rem;

    *,
    ::before,
    ::after {
        box-sizing: inherit;
    }
}

.pageHeader {
    background-color: var(--givewp-shades-white);
    padding-block: 1rem;
    padding-inline: 1.5rem;
}

.flexContainer {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    margin-top: var(--givewp-spacing-2);

    & > * {
        flex-shrink: 0;
    }
}

.flexRow {
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    column-gap: var(--givewp-spacing-2);
    margin-top: auto;
}

.flexRow:not(:first-child) {
    flex: 1;
    justify-content: flex-end;
}

.justifyContentEnd {
    flex: 1;
    justify-content: flex-end;
}

.breadcrumb {
    display: flex;
    align-items: center;
    gap: 0.25rem;
    line-height: 1.125rem;
    font-size: 0.75rem;

    & > span {
        font-weight: bold;
        color: var(--givewp-neutral-900);
    }

    & > a {
        text-decoration: none;
        color: var(--givewp-neutral-500);
        font-weight: 400;
    }

    & > a:hover {
        text-decoration: underline;
    }
}

.pageTitle {
    color: var(--givewp-neutral-900);
    margin: 0;
    font-size: 1.5rem;
    font-weight: 700;
    line-height: 2.25rem;
}

select[name="campaignId"] {
    display: none;
}

.pageHeader,
.tabMenu{
    position: sticky;
    top: var(--givewp-admin-bar-height);
    z-index: 2;
}

.tabMenu{
    top: calc(var(--givewp-admin-bar-height) + var(--header-height));
}

.tabs {
    display: flex;
    gap: 0.25rem;
    background-color: #fff;
    border-bottom: 0.0625rem solid #dbdbdb;

    &:not(.fullWidth) {
        padding: 0 var(--givewp-spacing-6);
    }

    &.fullWidth {
        padding-left: var(--givewp-spacing-6);
    }
}

.tabs [data-reach-tab],
.tabs [role='tab'] {
    position: relative;
    appearance: none;
    padding: var(--givewp-spacing-2) var(--givewp-spacing-4);
    border: 0;
    background-color: transparent;
    color: var(--givewp-neutral-700);
    font-size: 0.8rem;
    line-height: 1.5rem;
    text-align: center;
    cursor: pointer;
    box-sizing: border-box
}

@media screen and (min-width: 48rem) {
    .tabs [data-reach-tab],
    .tabs [role='tab'] {
        font-size: 1rem;
    }
}

.tabs [data-reach-tab]::after,
.tabs [role='tab']:after {
    content: '';
    display: block;
    position: absolute;
    top: calc(100% - 0.1875em);
    left: 0;
    right: 0;
    height: 0.1875rem;
    background-color: transparent;
    transition: background-color 100ms ease-in-out;
}

.tabs [role='tab']:hover,
.tabs [data-reach-tab]:hover {
    color: var(--givewp-neutral-900);
    background-color: var(--givewp-neutral-50);
}

.tabs [data-reach-tab][aria-selected='true'],
.tabs [role='tab'][aria-selected='true'] {
    font-weight: 600;
    color: var(--givewp-neutral-900);
}

// set width for each tab to maintain size on hover.
.tabs [data-reach-tab]:first-child,
.tabs [role='tab']:first-child {
    width: 106px;
}

.tabs [data-reach-tab]:nth-child(2),
.tabs [role='tab']:nth-child(2) {
    width: 95px;
}

.tabs [data-reach-tab]:last-child,
.tabs [role='tab']:last-child {
    width: 79px;
}

.tabs [data-reach-tab][aria-selected='true']::after,
.tabs [role='tab'][aria-selected='true']::after {
    background-color: #66bb6a;
}

.archiveDialogContent {
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
    color: var(--givewp-neutral-700);
}

.archiveDialogButtons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: var(--givewp-spacing-2);
    margin-top: var(--givewp-spacing-6);

    button {
        cursor: pointer;
        display: flex;
        flex: 1;
        justify-content: center;
        border-radius: 4px;
        font-size: 1rem;
        font-weight: 500;
        line-height: 1.5;
        padding: var(--givewp-spacing-3) var(--givewp-spacing-6);
        border: none;
    }

    .cancelButton {
        border: 1px solid var(--givewp-neutral-300);
        background-color: var(--givewp-shades-white);
        color: var(--givewp-neutral-900);

        &:hover {
            background-color: var(--givewp-neutral-50);
        }
    }

    .confirmButton {
        border: 1px solid var(--givewp-red-500);
        background-color: var(--givewp-red-500);
        color: var(--givewp-shades-white);

        &:hover {
            border: 1px solid var(--givewp-red-400);
            background-color: var(--givewp-red-400);
        }
    }
}
/* ... */

